cluster/gitops/media/sonarr/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
specs:
  - description: sonarr
    endpointSelector: &sonarr_selector
      matchLabels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/controller: sonarr
        app.kubernetes.io/instance: sonarr
    egress:
      # DNS resolution
      - &dns_resolution
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # Access to the backend PostgreSQL database
      - toEndpoints:
          - matchLabels:
              cnpg.io/cluster: sonarr-postgres-17
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - toFQDNs:
          # To Skyhook for tvdb info
          # TODO write an OSS implementation and replace this
          - matchName: skyhook.sonarr.tv
          # This does a lot of "phoning home" that really doesn't seem to be needed (like time sync).
          # This also MITMs at least one importer (MyAnimeList), meaning that it has more than enough
          # information to act on behalf of the user, opaquely, without much consent. There is PLENTY
          # of information available to the service for it to uniquely identify users.
          - matchName: services.sonarr.tv
          # To XEM for show mapping info
          - matchName: thexem.info
          # Show show posters
          - matchName: artworks.thetvdb.com
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
      # To download searchers
      - toEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/download-searcher: "true"
              io.kubernetes.pod.namespace: downloads
        toPorts:
          - ports:
              - port: "5076"
                protocol: TCP
      # To downloaders
      - toEndpoints:
          - matchLabels:
              endpoints.netpols.home.arpa/downloader: "true"
              io.kubernetes.pod.namespace: downloads
        toPorts:
          - ports:
              - port: "6789"
                protocol: TCP
              - port: "8080"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &webservice_ports
          - ports:
              - port: "8989"
                protocol: TCP
      - fromEndpoints:
          # NZBHydra2 configuration syncing
          - matchLabels:
              app.kubernetes.io/name: nzbhydra2
              io.kubernetes.pod.namespace: downloads
          # Exportarr for metrics scraping
          - &exportarr_selector
            matchLabels:
              app.kubernetes.io/name: sonarr
              app.kubernetes.io/controller: exportarr
              app.kubernetes.io/instance: sonarr
          # Gateway to webservice
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
          # media-processor workers — general imports transcoded show files,
          # transcode fetches cover art for embedding. Match all worker
          # controllers via the chart-wide instance label.
          - matchLabels:
              app.kubernetes.io/name: media-processor
              app.kubernetes.io/controller: general
              app.kubernetes.io/instance: media-processor
          - matchLabels:
              app.kubernetes.io/name: media-processor
              app.kubernetes.io/controller: transcode
              app.kubernetes.io/instance: media-processor
          # Seerr — request frontend; queries the API and submits new requests.
          - matchLabels:
              app.kubernetes.io/name: seerr
              app.kubernetes.io/controller: seerr
              app.kubernetes.io/instance: seerr
        toPorts: *webservice_ports
  - description: exportarr
    endpointSelector: *exportarr_selector
    egress:
      # DNS resolution
      - *dns_resolution
      # To Sonarr webservice to scrape metrics
      - toEndpoints:
          - <<: *sonarr_selector
        toPorts: *webservice_ports
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts: &metrics_ports
          - ports:
              - port: "80"
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts: *metrics_ports
